css/pagebuilder.css
/**
 * Basic item styles
 * ----------------------------------------------------------------------------
 */
.pagebuilder-column img {
	max-width: 100%;
	height: auto;
}
.pagebuilder-column iframe {
	max-width: 100% !important;
}

/**
 * Structure - widths
 * ----------------------------------------------------------------------------
 */
.pagbuilder-layout-aside.pagebuilder-item .pagebuilder-column-1 {
	width: 75%;
}
.pagbuilder-layout-aside.pagebuilder-item .pagebuilder-column-2 {
	width: 25%;
}
.pagbuilder-layout-half .pagebuilder-column {
	width: 50%;
}
.pagbuilder-layout-third-right .pagebuilder-column-1,
.pagbuilder-layout-third-left .pagebuilder-column-2 {
	width: 67%;
}
.pagbuilder-layout-third-left .pagebuilder-column-1,
.pagbuilder-layout-third-right .pagebuilder-column-2 {
	width: 33%;
}
.pagbuilder-layout-thirds .pagebuilder-column {
	width: 33.33%;
	width: calc(100% / 3);
}
.pagebuilder-column .pagebuilder-item,
.pagebuilder-column {
	display: block;
}

/**
 * Structure - margins
 * ----------------------------------------------------------------------------
 */
.cahnrs-dynamic-frame .cahnrs-dynamic-window > .pagebuilder-item,
#cahnrs-dynamic-page-load {
	margin: 0 1em 2em 2em;
}
.pagbuilder-layout-aside .pagebuilder-column-1 .pagebuilder-item,
.pagbuilder-layout-third-right .pagebuilder-column-1 .pagebuilder-item {
	margin-right: 2em;
}
.pagbuilder-layout-third-left .pagebuilder-column-2 .pagebuilder-item {
	margin-left: 2em;
}
.pagbuilder-layout-half .pagebuilder-column-1 .pagebuilder-item,
.pagbuilder-layout-thirds div:not(.pagebuilder-column-3) .pagebuilder-item,
.pagbuilder-layout-fourths div:not(.pagebuilder-column-4) .pagebuilder-item {
	margin-right: 1em;
}
.pagbuilder-layout-half .pagebuilder-column-2 .pagebuilder-item,
.pagbuilder-layout-thirds div:not(.pagebuilder-column-1) .pagebuilder-item,
.pagbuilder-layout-fourths div:not(.pagebuilder-column-1) .pagebuilder-item {
	margin-left: 1em;
}
.pagebuilder-item:not(.widget_page_title) { 
	margin-bottom: 1em;
}

/**
 * Structure - padding
 * ----------------------------------------------------------------------------
 */
.pagebuilder-layout {
	padding-bottom: 1em;
} 


/**
 * Float clearing (http://css-tricks.com/snippets/css/clear-fix/)
 * ----------------------------------------------------------------------------
 */
.pagebuilder-row:after {
	content: "";
	display: table;
	clear: both;
}

/**
 * Third tier/tabbed Navigtion
 * ----------------------------------------------------------------------------

#pagebuilder-tertiary-nav ul {
	list-style: none;
	margin: 0;
	padding: 0;
}
#pagebuilder-tertiary-nav li {
	display: inline-block;
	margin: 0;
	padding: 0;
	vertical-align: bottom;
}
#pagebuilder-tertiary-nav a {
	background: rgba( 255, 255, 255, 0.9 );
	display: inline-block;
	margin-right: 1px;
	padding: 0.5em 2em;
	position: relative;
}
#pagebuilder-tertiary-nav a:not(.selected) {
	color: inherit;
	opacity: 0.8;
}
#pagebuilder-tertiary-nav a.selected {
	font-weight: bold;
}
 */
#pagebuilder-tertiary-nav ul {
	list-style: none;
	padding: 0;
	margin: 0;
}
#pagebuilder-tertiary-nav li {
	display: inline-block;
	margin: 0;
	padding: 0;
	vertical-align: bottom;
}
#pagebuilder-tertiary-nav a {
	background: rgba( 255, 255, 255, 0.9 );
	border-top-left-radius: 1px;
  border-top-right-radius: 1px;
	display: inline-block;
	margin-right: 1px;
	padding: 0.5em 2em;
}
#pagebuilder-tertiary-nav a.selected {
	color: #5e6a71;
	font-weight: bold;
	position: relative;
}
#pagebuilder-tertiary-nav a:not(.selected) {
	opacity: 0.8;
}

/**
 * Media Queries
 * ----------------------------------------------------------------------------
 */
 
/* Small (max 791px) */
@media screen and (max-width: 791px) and (min-device-width: 990px), screen and (max-width: 791px) and (orientation: portrait) and (max-device-width: 420px), screen and (max-width: 791px) and (orientation: landscape) and (max-device-width: 480px) {

	.cahnrs-dynamic-frame .cahnrs-dynamic-window > .pagebuilder-item,
	#cahnrs-dynamic-page-load {
		margin: 0 1em 2em 1em;
	}

	/* Third tier/tabbed Navigtion (http://css-tricks.com/transformer-tabs/) */
	#pagebuilder-tertiary-nav {
		margin-bottom: 1em;
	}
	#pagebuilder-tertiary-nav ul {
		background: rgba( 255, 255, 255, 0.9 );
		overflow: hidden;
		position: relative;
	}
	#pagebuilder-tertiary-nav ul::after {
		content: "\F501";
		font-family: Spine-Icons;
		pointer-events: none;
		position: absolute;
		right: 1em;
		top: 0.6em;
		z-index: 2;
		-moz-osx-font-smoothing: grayscale;
		-webkit-font-smoothing:  antialiased;
	}
	#pagebuilder-tertiary-nav li {
		display: block;
	}
	#pagebuilder-tertiary-nav a {
		background: none;
		height: 100%;
		left: 0;
		margin: 0;
		position: absolute;
		top: 0;
		width: 100%;
	}
	#pagebuilder-tertiary-nav a.selected {
		z-index: 1;
	}
	#pagebuilder-tertiary-nav a:not(.selected) {
		opacity: 0;
	}
	#pagebuilder-tertiary-nav ul.open a {
		position: relative;
		display: block;
	}
	#pagebuilder-tertiary-nav ul.open a:not(.selected) {
		opacity: 1;
	}

}

/* Small (max 693)	*/
@media only screen and (max-width: 693px) {

	.cahnrs-dynamic-frame .cahnrs-dynamic-window > .pagebuilder-item,
	#cahnrs-dynamic-page-load {
		margin: 0 0 2em 0;
	}
	.pagebuilder-row .pagebuilder-column {
		margin: 0;
		width: 100% !important; /* Necessary in order to override inline styling */
	}
	.pagebuilder-item {
		margin: 0 0 1em 0 !important; /* Sad, evidently necessary to override :not selector rules */
		padding: 1em;
	}

	/* Third tier/tabbed Navigtion */
	#pagebuilder-tertiary-nav {
		margin-bottom: 1em;
	}
	#pagebuilder-tertiary-nav ul {
		background: #fff;
	}
	#pagebuilder-tertiary-nav a {
		padding: 0.5em 1em;
	}

}

/* IOS fix for unshelved spine */
@media only screen and (max-device-width: 480px) and (orientation: portrait), only screen and (max-device-width: 480px) and (orientation: landscape), only screen and (device-width: 768px) and (device-height: 1024px) and (orientation: portrait), only screen and (device-width: 768px) and (device-height: 1024px) and (orientation: landscape) {

	.pagebuilder-row .pagebuilder-column {
		margin: 0;
		width: 100% !important; /* Necessary in order to override inline styling */
	}
	.pagebuilder-item {
		margin: 0 0 1em 0 !important; /* Sad, evidently necessary to override :not selector rules */
		padding: 1em;
	}

	/* Third tier/tabbed Navigtion (maybe use the "size-lt-smallish" body class to get around duplication) */
	#pagebuilder-tertiary-nav {
		margin-bottom: 1em;
	}
	#pagebuilder-tertiary-nav ul {
		background: rgba( 255, 255, 255, 0.9 );
		overflow: hidden;
		position: relative;
	}
	#pagebuilder-tertiary-nav ul::after {
		content: "☰";
		position: absolute;
		top: 8px;
		right: 15px;
		z-index: 2;
		pointer-events: none;
	}
	#pagebuilder-tertiary-nav li {
		display: block;
	}
	#pagebuilder-tertiary-nav a {
		background: none;
		height: 100%;
		left: 0;
		margin: 0;
		position: absolute;
		top: 0;
		width: 100%;
	}
	#pagebuilder-tertiary-nav a.selected {
		z-index: 1;
	}
	#pagebuilder-tertiary-nav a:not(.selected) {
		opacity: 0;
	}
	#pagebuilder-tertiary-nav ul.open a {
		position: relative;
		display: block;
	}
	#pagebuilder-tertiary-nav ul.open a:not(.selected) {
		opacity: 1;
	}

}

